Improve API performance, security, and the redact-lists feature